2011-05-16  Adam Roben  <aroben@apple.com>

        Skip another new test that relies on parts of EventSender that WTR doesn't support

        * platform/mac-wk2/Skipped: Added fast/forms/focus-with-display-block.html.

2011-05-16  Adam Roben  <aroben@apple.com>

        Skip a new test that relies on parts of EventSender that WTR doesn't support

        * platform/mac-wk2/Skipped: Addd
        platform/mac/editing/pasteboard/drag-selections-to-contenteditable.html.

2011-05-16  Adam Roben  <aroben@apple.com>

        Update results for a new Mac dragging test

        This test has been failing since it was added in r86472. I don't know whether the old
        results are wrong or the test is actually showing a bug. <http://webkit.org/b/60882> tracks
        the failure.

        * platform/mac/editing/pasteboard/drag-selections-to-contenteditable-expected.txt:

2011-05-16  Pavel Feldman  <pfeldman@google.com>

        Not reviewed: simplify inspector dom actions test.

        * inspector/elements/edit-dom-actions.html:

2011-05-16  Alexander Pavlov  <apavlov@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: Fix SourceJavaScriptTokenizer keyword parsing
        https://bugs.webkit.org/show_bug.cgi?id=60773

        * inspector/syntax-highlight-javascript-expected.txt:
        * inspector/syntax-highlight-javascript.html:

2011-05-16  Robert Hogan  <robert@webkit.org>

        Reviewed by Yury Semikhatsky.

        [Qt] Fix crash in inspector/console/console-long-eval-crash.html
        https://bugs.webkit.org/show_bug.cgi?id=60858

        * platform/qt/Skipped:

2011-05-16  Gavin Barraclough  <barraclough@apple.com>

        Rubber stamped by Geoff Garen.

        https://bugs.webkit.org/show_bug.cgi?id=60866
        Evaluation order broken for empty alternatives in subpatterns

        Reverted https://bugs.webkit.org/show_bug.cgi?id=51395, and added
        test cases for /(|a)/ and /(a|)/, to test the evaluation order of